create schedular for API integration

--- a/dhis-2/dhis-services/dhis-service-reporting/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-reporting/pom.xml
@@ -87,6 +87,13 @@
       <artifactId>dhis-support-external</artifactId>
     </dependency>
     
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20190722</version>
+	</dependency>
+		    
   </dependencies>
   <properties>
     <rootDir>../../</rootDir>
