--- a/dhis-2/dhis-web/dhis-web-reports-national/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-reports-national/pom.xml
@@ -91,6 +91,12 @@
 			<artifactId>cave-process</artifactId>
 			<version>1.0.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20190722</version>
+		</dependency>
 		
 	</dependencies>
   <properties>
