update name of tracker-capture to Data Capture

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -51,7 +51,11 @@ dhis-web-mapping=GIS
 dhis-web-event-capture=Event Capture
 dhis-web-event-reports=Event Reports
 dhis-web-event-visualizer=Event Visualizer
-dhis-web-tracker-capture=Tracker Capture
+
+##dhis-web-tracker-capture=Tracker Capture
+
+dhis-web-tracker-capture=Data Capture
+
 dhis-web-cache-cleaner=Browser Cache Cleaner
 dhis-web-reporting=Reports
 dhis-web-light=Mobile (Light)
