add Java based HMIS report

--- a/dhis-2/dhis-web/dhis-web-reports-national/src/main/resources/org/hisp/dhis/reports/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-reports-national/src/main/resources/org/hisp/dhis/reports/i18n_module.properties
@@ -1,3 +1,8 @@
+hmis_report = HMIS Reports
+hmis_ra = HMIS Reports Analyser
+bulk_report = Bulk HMIS Reports
+bulk_ra = Bulk HMIS Reports Analyser
+
 goi_ra = Government of India Reports Analyser
 routine_ra = Routine Report Analyser
 ra_cold_chain = Cold Chain Report Analyser
