update java based HMIS report

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -73,13 +73,13 @@ dhis-web-menu-management=Menu Management
 #-- india module -->
 dhis-web-maintenance-in=Configuration
 dhis-web-excelimport = Data Integration
-dhis-web-reports-national = HMIS Reports
+dhis-web-reports = HMIS Reports
 
 #-- Intro modules -------------------------------------------------------------#
 
 #-- india module -->
 intro_dhis-web-excelimport = Data Integration
-intro_dhis-web-reports-national = HMIS Reports
+intro_dhis-web-reports = HMIS Reports
  
 intro_dhis-web-maintenance-mobile=Maintain data sets plus settings for mobile reporting and SMS configuration.
 intro_dhis-web-maintenance-appmanager=Access and upload apps, which are extensions to the standard user interface.
