integrate java-based report for uplod on GOI portal

--- a/dhis-2/dhis-web/dhis-web-reports-national/src/main/resources/org/hisp/dhis/reports/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-reports-national/src/main/resources/org/hisp/dhis/reports/i18n_module.properties
@@ -1,7 +1,7 @@
-hmis_report = HMIS Reports
-hmis_ra = HMIS Reports Analyser
-bulk_report = Bulk HMIS Reports
-bulk_ra = Bulk HMIS Reports Analyser
+hmis_uphmis_report = HMIS/UPHMIS Reports
+hmis_uphmis_ra = HMIS/UPHMIS Reports Analyser
+bulk_report = Bulk HMIS/UPHMIS Reports
+bulk_ra = Bulk HMIS/UPHMIS Reports Analyser
 
 goi_ra = Government of India Reports Analyser
 routine_ra = Routine Report Analyser
