app dhis-in-services

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -72,7 +72,17 @@ dhis-web-dashboard=Dashboard
 dhis-web-menu-management=Menu Management
 dhis-web-data-visualizer=Data Visualizer
 
+#-- india module -->
+dhis-web-maintenance-in=Configuration
+dhis-web-dashboard=Data Analyser
+dhis-web-reports=NHM Reports
+
+
 #-- Intro modules -------------------------------------------------------------#
+
+intro_dhis-web-maintenance-in = HMIS/UPHMIS Reports
+intro_dhis-web-dashboard = Data Analyser
+intro_dhis-web-reports = NHM Reports
 
 intro_dhis-web-maintenance-mobile=Maintain data sets plus settings for mobile reporting and SMS configuration.
 intro_dhis-web-maintenance-appmanager=Access and upload apps, which are extensions to the standard user interface.
