--- a/dhis-2/dhis-web/dhis-web-portal/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-portal/pom.xml
@@ -88,6 +88,30 @@
       <version>${project.version}</version>
       <type>war</type>
     </dependency>
+    
+ 	<!-- India modules Start -->
+	
+    <dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-web-maintenance-in</artifactId>
+      <version>${project.version}</version>
+      <type>war</type>
+    </dependency>  
+    <dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-web-reports-in</artifactId>
+      <version>${project.version}</version>
+      <type>war</type>
+    </dependency>    
+    <dependency>
+     <groupId>org.hisp.dhis</groupId>
+     <artifactId>dhis-web-dataanalyser-in</artifactId>
+     <version>${project.version}</version>
+     <type>war</type>
+   </dependency>   
+    
+    <!-- India modules End -->      
+    
   </dependencies>
   <properties>
     <rootDir>../../</rootDir>
