--- a/dhis-2/dhis-web/dhis-web-portal/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-portal/pom.xml
@@ -142,6 +142,14 @@
       <version>${project.version}</version>
       <type>war</type>
     </dependency>
+    <!-- India modules Start -->
+	<dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-web-excelimport</artifactId>
+      <version>${project.version}</version>
+      <type>war</type>
+    </dependency>	
+	<!-- India modules End -->
   </dependencies>
   <properties>
     <rootDir>../../</rootDir>
