--- a/dhis-2/dhis-web/dhis-web-reporting/src/main/resources/org/hisp/dhis/reporting/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-reporting/src/main/resources/org/hisp/dhis/reporting/i18n_module.properties
@@ -273,3 +273,6 @@ analytics_skip_event_tables=Skip generation of event data
 analytics_skip_enrollment_tables=Skip generation of enrollment data
 analytics_last_years=Number of last years of data to include
 analytics_invalid_last_years=Invalid number of last years
+
+# add for tibet
+get_report_as_workbook = Download as Excel
