--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -72,7 +72,11 @@ dhis-web-dashboard=Dashboard
 dhis-web-menu-management=Menu Management
 dhis-web-data-visualizer=Data Visualizer
 
+dhis-web-excelimport = Data Integration
+
 #-- Intro modules -------------------------------------------------------------#
+
+intro_dhis-web-excelimport = Data Integration
 
 intro_dhis-web-maintenance-mobile=Maintain data sets plus settings for mobile reporting and SMS configuration.
 intro_dhis-web-maintenance-appmanager=Access and upload apps, which are extensions to the standard user interface.
