add feature to download xls in dataset report

--- a/dhis-2/dhis-web/dhis-web-reporting/src/main/resources/org/hisp/dhis/reporting/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-reporting/src/main/resources/org/hisp/dhis/reporting/i18n_module.properties
@@ -1,3 +1,5 @@
+get_report_as_workbook = Download as Excel
+
 please_select_org_unit= Please select an organisation unit
 please_select_period= Please select a period
 please_select_group_set=Please select a group set
