--- a/dhis-2/dhis-web/dhis-web-portal/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-portal/pom.xml
@@ -88,6 +88,15 @@
       <version>${project.version}</version>
       <type>war</type>
     </dependency>
+	
+ 	<!-- India modules Start -->
+    <dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-web-excelimport</artifactId>
+      <version>${project.version}</version>
+      <type>war</type>
+    </dependency>  	
+		
   </dependencies>
   <properties>
     <rootDir>../../</rootDir>
